# hand

./: .gitignore  README.md
ai/: .gitignore  build.caffe.md  build.n.run.md  temp.md
ai/caffe_hisi/: CMakeLists.txt  Makefile.config
ai/caffe_hisi/include/caffe/layers/: pass_through_layer.hpp  reorg_layer.hpp  upsample_layer.hpp
ai/caffe_hisi/src/caffe/layers/: pass_through_layer.cpp  pass_through_layer.cu  upsample_layer.cpp
ai/caffe_hisi/src/caffe/proto/: caffe.proto
ai/yolo/: CMakeLists.txt  CheapSort.cpp  CheapSort.h  Hungarian.cpp  Hungarian.h  KalmanTracker.cpp  KalmanTracker.h  YoTracker.cpp  YuvReader.cpp  YuvReader.h  box.cpp  box.h  caffe_static_lib_common.h  foo_tracker.h  imvt_cv_tracking.cpp  imvt_yolo2.cpp  imvt_yolo2.h  imvt_yolo2x.cpp  imvt_yolo2x.h  imvt_yolo3.cpp  imvt_yolo3.h  imvt_zmq_pub.cpp  imvt_zmq_pub.h  imvt_zmq_sub.cpp  imvt_zmq_sub.h  imvt_zmq_sub_yuv.cpp  imvt_zmq_sub_yuv.h  log.h  proxy_reader.h  readme.md  yolo.cpp  yolo.h  yolo1.cpp  yolo1.h  yolo2.cpp  yolo2.h  yolo2ab.cpp  yolo2ab.h
ai/yolo/main/: Detecter.cpp  YoTracker.cpp  YoloDetecter.cpp  YoloTracker.cpp
ai/yolo/reader/: YuvReader.h  proxy_reader.cpp  proxy_reader.h
ai/yolo/sift/: test_sift.cpp
ai/yolo/tracking/kcf/: foo_tracker.cpp  foo_tracker.h  imvt_cv_tracking.cpp  imvt_cv_tracking.h  moving_object.cpp  moving_object.h
ai/yolo/tracking/sort/: CheapSort.cpp  CheapSort.h  Hungarian.cpp  KalmanTracker.cpp  KalmanTracker.h  SimilarObj.cpp  SimilarObj.h  SimilarTracker.cpp  SimilarTracker.h  readme.md  sort_def.h
ai/yolo/zmq/: imvt_zmq_pub.cpp  imvt_zmq_sub.cpp  imvt_zmq_sub_yuv.cpp
coco/: fiftyone.py
darknet2caffe/: 01.setup.docker.md  readme.md
doc/: 01.prepare.train.data.md  02.convert_darknet2caffe.md  03.caffe2hisi_acnn.md  03.setup_hisi_docker.md  04.caffe2hisi_acnn.md  docker.for.amct.4090.md  docker.for.amct.gmd.md  handy.md  hidocker.md  hisi.caffe.setup.md  prepare.data.md  py.md  ubuntu.md
doc/darknet2caffe/: 01.setup.docker.md  02.build.caffe.and.convert.md
hagrid/: converter_config.yaml  converter_config_leo4090.yaml  converter_config_leo4090_full.yaml  hagrid_to_yolo.py  train_hand_face.txt
mAP/: .gitignore  readme.leo.md
mAP/input/: detection-results  ground-truth  images-optional
mediapipe/: auto_label_face.py  auto_rename_label.py  coco_00_demo.py  coco_01_to_yolo.py  coco_02_show_image.py  coco_03_auto_label_face.py  coco_04_create_filelist.py  coco_05_sel_img.py  coco_06_exclude_filelist.py  coco_07_find_last_file.py  com_detection.py  com_files.py  cus_01_to_yolo.py  cus_02_show_image.py  cus_03_create_filelist.py  filelist_shuffer.py  fullset_filelist.txt  hagrid_01_auto_label_face.py  hagrid_02_rescale_img_and_copy_label.py  hagrid_03_display_and_verify_label.py  hagrid_04_create_filelist.py  hagrid_05_sel_img.py  hagrid_99_remove_or_rename_label.py  mAP_coco_01_collect.py  mAP_coco_02_show_image.py  mAP_coco_03_chk_label_data.py  object_detection.py  r01_auto_label_face.py  r02_auto_rename_label.py  r02_rescale_img_and_copy_label.py  r02_zzz_auto_rename_label.py  r03_put_label_in_image_dir.py  r04_label_vol_face_data.py  r05_label_wider_face_data.py  r06_wider_to_yolo.py  requirements.txt  sel_voc_filelist.txt  test_hog_on_face.py  val_coco_03_chk_label_data.py  val_coco_04_calc_map.py  (+10 more)
mediapipe/hand_detection/: basic_hand_tracking.py
mediapipe/legacy/: r04_label_vol_face_data.py
mediapipe/output/: exclude_coco_filelist.txt  exclude_hagrid_filelist.txt  exclude_voc_filelist.txt
mediapipe/value/: coco.names
mediapipe/win10/: coco_05_sel_img.py  comm.py
sample/face_detection/: pixelate_faces.py
sample/hand_detection/: hand_utils.py
tools/: run_01_darnet2caffe_yolo3.sh  run_01_yolo2_darknet_to_hisi.sh  run_01_yolo3_darknet_to_hisi.sh
yolo/yolo3_webcam/: README.md  darnet2caffe.md  detection.py
